--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "The Personal Finance Tracker web application helps users track their income and expenses, set budget targets, and gain AI-powered financial insights to make smarter financial decisions. Designed for college students and young professionals, it simplifies money management and encourages better financial habits.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,8 @@
     "mongoose": "^8.19.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^7.1.4"
   }
 }
